src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_7.snap
---
source: src/parser/test.rs
description: "{,1:2}"
expression: result
---
[
    Hash {
        token: Token(LBrace, "{", (0,0)->(0,1)),
        kv_pairs: Ok(
            [
                Err(
                    Err(UnexpectedToken("SyntaxError: Unexpected ','."), (0,1)->(0,2)),
                ),
            ],
        ),
    },
]

===================================

{,1:2}
 ^ [Error] SyntaxError: Unexpected ','.
